# aloecrypt_py

./: .gitignore  .technoproj  Makefile  README.md  mkdocs.yml  pyproject.toml  test.ipynb
.github/workflows/: ci.yml  publish.yml
aloecrypt/: __init__.py  __init__.pyi  _plugin.py  api.py  api.pyi  consts.py  functions.py  kem.py  kem.pyi  signatory.py  signatory.pyi  traits.py
aloecrypt/.bin/: aloecrypt_plugin.wasm
aloecrypt/session/: __init__.py  __init__.pyi  builder.py  builder.pyi  message.py  message.pyi
config/: docs.nginx.conf
docs/: index.md  quickstart.md
docs/api/: builder.md  consts.md  kem.md  session.md  signatory.md
script/: version.mk
test/: test_unit.py
